recurrence.cpp - shiftTimes() prevent crash on missing or invalid period

In shiftTimes(), don't crash if unable to locate an rDateTime in
the rDateTimePeriods hash (eg if that hash is empty).

BUG: 499470
FIXED-IN: 6.12.0